[gd_scene load_steps=7 format=2]

[ext_resource path="res://GhostSpawner.gd" type="Script" id=1]
[ext_resource path="res://assets/environment/inverted/spawner_01.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/inverted/spawner_02.png" type="Texture" id=3]
[ext_resource path="res://assets/environment/normal/spawner_02.png" type="Texture" id=4]
[ext_resource path="res://assets/environment/normal/spawner_01.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5, 16 )

[node name="GhostSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
autostart = true

[node name="working_i" type="Sprite" parent="."]
visible = false
light_mask = 32
texture = ExtResource( 2 )

[node name="notworking_i" type="Sprite" parent="."]
visible = false
light_mask = 32
normal_map = ExtResource( 3 )

[node name="working" type="Sprite" parent="."]
visible = false
z_index = -1
texture = ExtResource( 5 )

[node name="notworking" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
